--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "main": "dist/jasmine-fail-fast.js",
   "scripts": {
-    "compile": "babel -o dist/jasmine-fail-fast.js src/index.js",
-    "prepublish": "npm run compile"
+    "compile": "mkdirp dist && babel -o dist/jasmine-fail-fast.js src/index.js",
+    "prepublish": "npm run compile",
+    "pretest": "npm run compile",
+    "test": "jasmine"
   },
   "keywords": [
     "jasmine",
@@ -21,6 +23,8 @@
     "lodash": "3.10.0"
   },
   "devDependencies": {
-    "babel": "5.6.14"
+    "babel": "5.6.14",
+    "jasmine": "^2.3.1",
+    "mkdirp": "^0.5.1"
   }
 }
