--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
   },
   "main": "dist/jasmine-fail-fast.js",
   "scripts": {
-    "compile": "mkdirp dist && babel -o dist/jasmine-fail-fast.js src/index.js",
-    "prepublish": "npm run compile",
-    "pretest": "npm run compile",
+    "prepublishOnly": "mkdirp dist && babel -o dist/jasmine-fail-fast.js src/index.js",
     "test": "jasmine"
   },
   "keywords": [
     "jasmine",
     "fail-fast"
   ],
-  "author": "patrick@updater.com",
+  "author": "pmowrer@gmail.com",
   "license": "MIT",
   "dependencies": {
     "lodash": "3.10.0"
@@ -25,6 +23,8 @@
   "devDependencies": {
     "babel": "5.6.23",
     "jasmine": "^2.3.1",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "semantic-release": "^17.0.2",
+    "semantic-release-github-pr": "^6.0.0"
   }
 }
