--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "pmowrer@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "lodash": "3.10.0"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "babel": "5.6.23",
     "jasmine": "^2.3.1",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "^1.0.3",
     "semantic-release": "^17.0.2",
     "semantic-release-github-pr": "^6.0.0"
   }
